--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,20 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      HUGO_VERSION: 0.111.1
+
     steps:
     - uses: actions/checkout@v1
+
+    - name: Setup Hugo
+      uses: peaceiris/setup-hugo@v1
+      with:
+        hugo-version: ${{ env.HUGO_VERSION }}
+      
+    - name: Build
+      run: hugo --minify
+    
     - name: Install coscmd
       run: sudo pip install coscmd
     - name: Configure coscmd
