--- a/static/manifest.json
+++ b/static/manifest.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "default_locale": "en",
   "description": "Hugo blog theme with rich features",
-  "start_url": "https://themes.gohugo.io/theme/hugo-theme-zzo/",
+  "start_url": "https://laomeinote.com/",
   "icons": [
     {
       "src": "favicon/android-icon-36x36.png",
