add google tgm and ga

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -17,7 +17,7 @@ paginate = 13
 rssLimit = 100
 
 enableGitInfo = false
-googleAnalytics = "G-D2X3667B79"
+googleAnalytics = ""
 
 [markup]
   [markup.goldmark]
