--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -97,12 +97,15 @@ enableLangChange = false
 enableThemeChange = true
 
 # service
-googleTagManager = "GTM-NNWMB4S" # GTM-XXXXXX
-baiduAnalytics = "17cd99aec9551f62aeca545b754d870b"
+googleTagManager = "" # GTM-XXXXXX
+baiduAnalytics = ""
 enableBusuanzi = true
 busuanziSiteUV = true
 busuanziSitePV = true
 busuanziPagePV = true
+
+# Google Analytics 4
+googleAnalyticsID = "G-D2X3667B79"  # G-xxxXXXXXX
 
 # rss
 updatePeriod = "" # Possible values: 'hourly', 'daily', 'weekly', 'monthly', or 'yearly'.
