--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://laomeinote.com"
 relativeURLs = true
-title = "laomeinote"
+title = "老梅笔记"
 theme = "zzo"
 
 defaultContentLanguage = "zh"
