--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -36,10 +36,10 @@ googleAnalytics = ""
     startLevel = 2
 
 [outputs]
-  home = ["HTML", "RSS", "SearchIndex"]
-  section = ["HTML", "RSS", "SearchIndex"]
-  taxonomyTerm = ["HTML", "RSS", "SearchIndex"]
-  taxonomy = ["HTML", "RSS", "SearchIndex"]
+  home = ["HTML", "SearchIndex"]
+  section = ["HTML",  "SearchIndex"]
+  taxonomyTerm = ["HTML", "SearchIndex"]
+  taxonomy = ["HTML", "SearchIndex"]
 
 [outputFormats]
   [outputFormats.SearchIndex]
