--- a/config/_default/menus.zh.toml
+++ b/config/_default/menus.zh.toml
@@ -14,5 +14,5 @@
 [[main]]
   identifier = "Chatgpt"
   name = "Chatgpt"
-  url = "https://chat.laomeinote.com"
+  url = "https://chatnext.laomeinote.com"
   weight = 4
