--- a/config/_default/menus.zh.toml
+++ b/config/_default/menus.zh.toml
@@ -19,5 +19,9 @@
 [[main]]
   parent = "chatgpt"
   name = "chatweb"
-  url = "http://chatweb.laomeinote.com/#/chat/1002"
+  url = "https://chatweb.laomeinote.com/#/chat/1002"
 
+[[main]]
+  parent = "chatgpt"
+  name = "chatnext"
+  url = "https://chatnext.laomeinote.com"
