--- a/data/font.toml
+++ b/data/font.toml
@@ -1,2 +1,2 @@
-title_font = "\"Montserrat\", sans-serif"
-content_font = "\"muli\", sans-serif"
+title_font = "\"LXGWBright\", sans-serif"
+content_font = "\"LXGWBright\", sans-serif"
