--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -19,6 +19,10 @@ rssLimit = 100
 enableGitInfo = false
 googleAnalytics = ""
 
+[params]
+  [params.headers]
+    Access-Control-Allow-Origin = "https://www.laomeinote.com"
+
 [markup]
   [markup.goldmark]
     [markup.goldmark.renderer]
