使用cdn（bootcdn.net）中的LXGW字体

--- a/data/font.toml
+++ b/data/font.toml
@@ -1,2 +1,2 @@
-title_font = "\"Montserrat\", sans-serif"
-content_font = "\"Merriweather\", sans-serif"
+title_font = "\"LXGW WenKai\", sans-serif"
+content_font = "\"LXGW WenKai Screen\", sans-serif"
