update Access-Ctronl-Allow-Origin in config file

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -21,7 +21,7 @@ googleAnalytics = ""
 
 [params]
   [params.headers]
-    Access-Control-Allow-Origin = "https://www.laomeinote.com"
+    Access-Control-Allow-Origin = "https://laomeinote.com"
 
 [markup]
   [markup.goldmark]
